Fixed TimeZone Test Alignment

--- a/src/scss/components/_world-clock.scss
+++ b/src/scss/components/_world-clock.scss
@@ -39,6 +39,10 @@
 			&:hover {
 				background-color: var(--btn-color);
 			}
+			border: 2px solid transparent;
+			&:focus-visible {
+				border: 2px solid white;
+			}
 		}
 	}
 	aside {
@@ -50,7 +54,8 @@
 		scrollbar-width: none;
 	}
 	.timezone {
-		display: flex;
+		display: grid;
+		grid-template-columns: 40px 100px 1fr;
 		align-items: center;
 		gap: 20px;
 		background-color: var(--hover-color);
@@ -59,6 +64,9 @@
 		transition: 0.1s ease all;
 		box-shadow: 0 0 2px 2px rgba($color: #000000, $alpha: 0.1);
 		border: 1px solid transparent;
+		&:focus-visible {
+			border: 1px solid white;
+		}
 		span {
 			font-size: 20px;
 		}
@@ -86,9 +94,6 @@
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -80%);
-	// transition: all 0.3s cubic-bezier(0.25, 1, 0.5, 1);
-	// transition: all 0.4s cubic-bezier(0.68, -0.75, 0.27, 1.55);
-	// transition: all 0.4s cubic-bezier(0.75, -0.85, 0.3, 1.75);
 	transition: all 0.4s cubic-bezier(0.85, -1.2, 0.35, 1.8);
 	background-color: #212121;
 	padding: 20px;
@@ -134,6 +139,10 @@
 		align-items: center;
 		font-size: 16px;
 		cursor: pointer;
+		border: 2px solid transparent;
+		&:focus-visible {
+			border: 2px solid white;
+		}
 	}
 	button:first-child {
 		background-color: #76b9ed;
@@ -266,7 +275,7 @@ body {
 	background: var(--black-color);
 }
 .hand.hour {
-	height: 100px;
+	height: 80px;
 	width: 8px;
 	background: var(--black-color);
 }
